# spotify_scraper

./: .gitignore  LICENSE  README.md  b2_utils.py  current_timestamp.txt  prefect.yaml  pyproject.toml  requirements.txt  run_spotify_scraper.sh  scrape_plays.py  spotify_parser.py  spotify_plays_20240101_000000.json  spotify_scraper.py  spotify_track_enrichment.py  spotify_track_parser.py  starting_timestamp.txt  upload_historical_plays.py
dbt/spotify_plays/: .user.yml  dbt_project.yml
dbt/spotify_plays/models/: all_plays.sql  schema.yml
~/.dbt/: profiles.yml
