[tool.poetry]
name = "spotify-scraper"
version = "0.1.0"
description = "Scraper to get plays from spotify"
authors = ["Tim Enders <enders.tim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
